Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/PackageClassAmbiguity/Bad.out
Bad.java:12:1: compiler.err.pkg.clashes.with.class.of.same.name: java.lang.String
1 error
